[gd_scene load_steps=2 format=3 uid="uid://ypha42j8wiky"]

[ext_resource type="Script" uid="uid://biq0rhfakfx7r" path="res://scenes/scene_main_menu.gd" id="1_wqhsr"]

[node name="SceneMainMenu" type="MarginContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_wqhsr")

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
layout_mode = 2

[node name="NewGame" type="Button" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
text = "New Game"

[node name="LoadGame" type="Button" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Load Game"

[node name="Options" type="Button" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Options"

[node name="Exit" type="Button" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Exit
"

[connection signal="button_down" from="CenterContainer/VBoxContainer/NewGame" to="." method="_on_new_game_button_down"]
[connection signal="button_down" from="CenterContainer/VBoxContainer/LoadGame" to="." method="_on_load_game_button_down"]
[connection signal="button_down" from="CenterContainer/VBoxContainer/Options" to="." method="_on_options_button_down"]
[connection signal="button_down" from="CenterContainer/VBoxContainer/Exit" to="." method="_on_exit_game_button_down"]
